objects/Tool_Displacement__c/Tool_Displacement__c.object-meta.xml
<CustomObject>
    <label>Tool Displacement</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Displacement Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tool Displacements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>