objects/Tool_Displacement__c/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <description>Additional Details</description>
    <inlineHelpText>Additional Details</inlineHelpText>
    <label>Additional Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>