objects/Tool_Displacement__c/fields/Approximate_Displacement_Date__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Displacement_Date__c</fullName>
    <description>https://tanium.lightning.force.com/lightning/r/Case/5000e00001mr199AAA/view
Date is required when the user chooses “Partial” or “Full” from *Displacement Stage* dropdown.</description>
    <label>Approximate Displacement Date</label>
    <type>Date</type>
</CustomField>