objects/Tool_Displacement__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Only</fullName>
            </value>
            <value>
                <fullName>External Ok</fullName>
            </value>
            <value>
                <fullName>See Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>