objects/Tool_Displacement__c/fields/Displacement_Intent__c.field-meta.xml
<CustomField>
    <fullName>Displacement_Intent__c</fullName>
    <description>Changed Label from Displacement Intent to Displacement Driver
https://tanium.lightning.force.com/lightning/r/Case/5000e00001mr199AAA/view</description>
    <inlineHelpText>Displacement Driver</inlineHelpText>
    <label>Displacement Driver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Ease of Use</fullName>
            </value>
            <value>
                <fullName>Feature/Function</fullName>
            </value>
            <value>
                <fullName>Tools Rationalization (cost/agent reduction)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>