objects/Tool_Displacement__c/fields/Displacement_Stage__c.field-meta.xml
<CustomField>
    <fullName>Displacement_Stage__c</fullName>
    <label>Displacement Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evaluating</fullName>
            </value>
            <value>
                <fullName>Implementing</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Not Displacing Anymore</fullName>
                <label>Displacement Failed</label>
            </value>
            <value>
                <fullName>Not Exploring Displacement</fullName>
                <isActive>false</isActive>
                <label>Not Exploring Displacement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>