objects/Tool_Displacement__c/fields/Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date__c</fullName>
    <description>Modified Date</description>
    <formula>DATEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Modified Date</inlineHelpText>
    <label>Modified Date</label>
    <type>Date</type>
</CustomField>