objects/Tool_Displacement__c/fields/Reason_For_Not_Displaying__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Not_Displaying__c</fullName>
    <description>Changes from &quot;Reason for not Displaying&quot; to &quot;Failed Displacement Reason &quot;
https://tanium.lightning.force.com/lightning/r/Case/5000e00001mr199AAA/view</description>
    <inlineHelpText>Reason for not Displaying</inlineHelpText>
    <label>Failed Displacement Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Displacement_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Difficult to deploy and/or use</fullName>
            </value>
            <value>
                <fullName>Incumbent solution is good enough</fullName>
            </value>
            <value>
                <fullName>Issue in the sales experience</fullName>
            </value>
            <value>
                <fullName>Missing features</fullName>
            </value>
            <value>
                <fullName>Pricing/Packaging</fullName>
            </value>
            <value>
                <fullName>Prospect did not have a need right now</fullName>
            </value>
            <value>
                <fullName>Support model</fullName>
            </value>
            <value>
                <fullName>Switching/migration costs too high</fullName>
            </value>
            <value>
                <fullName>Tanium did not meet customer expectations</fullName>
            </value>
            <value>
                <fullName>Unknown/Greenfield</fullName>
            </value>
            <value>
                <fullName>Account Volatility</fullName>
                <isActive>false</isActive>
                <label>Account Volatility</label>
            </value>
            <value>
                <fullName>Attached to Existing Tools</fullName>
                <isActive>false</isActive>
                <label>Attached to Existing Tools</label>
            </value>
            <value>
                <fullName>Feature Incompleteness</fullName>
                <isActive>false</isActive>
                <label>Feature Incompleteness</label>
            </value>
            <value>
                <fullName>Too Much to Manage</fullName>
                <isActive>false</isActive>
                <label>Too Much to Manage</label>
            </value>
            <value>
                <fullName>Value Unproven</fullName>
                <isActive>false</isActive>
                <label>Value Unproven</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>