objects/Tool_Displacement__c/fields/Secondary_Tam_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Tam_Email__c</fullName>
    <inlineHelpText>Visible to Syst. Admin and used in Email Alert</inlineHelpText>
    <label>Secondary Tam Email</label>
    <type>Email</type>
</CustomField>