objects/Tool_Displacement__c/fields/Tanium_Module_Text__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Module_Text__c</fullName>
    <description>Tanium Module Text
Field removed based on https://tanium.lightning.force.com/lightning/r/Case/5000e00001mr199AAA/view</description>
    <inlineHelpText>Tanium Module Text</inlineHelpText>
    <label>DEPRECATED - Tanium Module Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>