objects/Tool_Displacement__c/fields/Tools__c.field-meta.xml
<CustomField>
    <fullName>Tools__c</fullName>
    <label>Tool Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vendor__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Active Response</fullName>
            </value>
            <value>
                <fullName>Altiris</fullName>
            </value>
            <value>
                <fullName>APIC</fullName>
            </value>
            <value>
                <fullName>AppFlow</fullName>
            </value>
            <value>
                <fullName>Application Control</fullName>
            </value>
            <value>
                <fullName>ARALOC</fullName>
            </value>
            <value>
                <fullName>Aternity</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>BigFix</fullName>
            </value>
            <value>
                <fullName>Bit9</fullName>
            </value>
            <value>
                <fullName>BladeLogic</fullName>
            </value>
            <value>
                <fullName>BWise</fullName>
            </value>
            <value>
                <fullName>Casper</fullName>
            </value>
            <value>
                <fullName>CB Protection</fullName>
            </value>
            <value>
                <fullName>CCM</fullName>
            </value>
            <value>
                <fullName>CCS</fullName>
            </value>
            <value>
                <fullName>Client Health</fullName>
            </value>
            <value>
                <fullName>Cloud Management Console</fullName>
            </value>
            <value>
                <fullName>Cloud Manager</fullName>
            </value>
            <value>
                <fullName>Cloudwatch</fullName>
            </value>
            <value>
                <fullName>CMDB</fullName>
            </value>
            <value>
                <fullName>CMP</fullName>
            </value>
            <value>
                <fullName>CompuTrace</fullName>
            </value>
            <value>
                <fullName>Configuration Manager</fullName>
            </value>
            <value>
                <fullName>Connect</fullName>
            </value>
            <value>
                <fullName>Crowd</fullName>
            </value>
            <value>
                <fullName>CyberSecurity</fullName>
            </value>
            <value>
                <fullName>DefensePro</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>