objects/Tool_Displacement__c/fields/Trigger_Event_for_Displacement__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Event_for_Displacement__c</fullName>
    <description>https://tanium.lightning.force.com/lightning/r/Case/5000e00001mr199AAA/view</description>
    <label>Trigger Event for Displacement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breach</fullName>
            </value>
            <value>
                <fullName>Contract Expiring</fullName>
            </value>
            <value>
                <fullName>Existing Tool Failure</fullName>
            </value>
            <value>
                <fullName>New Leader/Political</fullName>
            </value>
            <value>
                <fullName>M&amp;A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>