objects/Tool_Displacement__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1E</fullName>
            </value>
            <value>
                <fullName>Absolute</fullName>
            </value>
            <value>
                <fullName>Absolute Software</fullName>
            </value>
            <value>
                <fullName>Accelerite</fullName>
            </value>
            <value>
                <fullName>Activu</fullName>
            </value>
            <value>
                <fullName>Adaptiva</fullName>
            </value>
            <value>
                <fullName>AlienVault</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Anomali</fullName>
            </value>
            <value>
                <fullName>AppDome</fullName>
            </value>
            <value>
                <fullName>Appthority</fullName>
            </value>
            <value>
                <fullName>Arcsight</fullName>
            </value>
            <value>
                <fullName>Argent</fullName>
            </value>
            <value>
                <fullName>Atlassian</fullName>
            </value>
            <value>
                <fullName>Avast</fullName>
            </value>
            <value>
                <fullName>Avatier</fullName>
            </value>
            <value>
                <fullName>Avecto</fullName>
            </value>
            <value>
                <fullName>Barracuda</fullName>
            </value>
            <value>
                <fullName>Bay Dynamics</fullName>
            </value>
            <value>
                <fullName>BDNA</fullName>
            </value>
            <value>
                <fullName>BeyondTrust</fullName>
            </value>
            <value>
                <fullName>BitGlass</fullName>
            </value>
            <value>
                <fullName>BMC</fullName>
            </value>
            <value>
                <fullName>Bomgar</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>Carbon Black</fullName>
            </value>
            <value>
                <fullName>Chatsworth</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Citrix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>